# structbuilder

./: .gitignore  CMakeLists.txt  README.md  debug  main.go  output.tpl  output_cpp.tpl
cpp/: sample.cpp  serializer.hpp  struct.cpp  struct.hpp  struct_json.cpp  struct_lua.cpp  struct_ser.cpp  test.cpp  test.hpp  test_def.hpp  test_ser.cpp  test_ser.hpp
examples/: serialize.toml  struct.toml  test.toml
lua/: struct.lua
makestruct/: struct.go
serialize/: serialize.go
templates/: luasol.tpl  luasol_child.tpl  serialize_hpp.tpl  struct_base.tpl  struct_child.tpl  struct_hpp.tpl  struct_json.tpl  struct_json_child_in.tpl  struct_json_child_out.tpl  struct_json_enum.tpl  struct_ser.tpl  struct_ser_child_in.tpl  struct_ser_child_out.tpl  struct_ser_child_size.tpl
